
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int dbuff ;


 scalar_t__ memcmp (char*,char*,int ) ;
 int memset (char*,char,int) ;
 scalar_t__ net_rlinet (int,char*,int,int) ;
 int strlen (char*) ;

void
ftp_recv_until (int sock, char *buff, int len, char *begin)
{
        char dbuff[2048];


        if (buff == ((void*)0)) {
                buff = dbuff;
                len = sizeof (dbuff);
        }

        do {
                memset (buff, '\x00', len);
                if (net_rlinet (sock, buff, len - 1, 20) <= 0)
                        return;
        } while (memcmp (buff, begin, strlen (begin)) != 0);

        return;
}
